fix map size at load

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       </div>
       <div class="map-container">
         <div id="map"></div>
-        <div class="static-map">
+        <!-- <div class="static-map">
           <img src="./images/station_view.png">
-        </div>
+        </div> -->
       </div>
     </main>
     <footer>
