Add other header links; put h1 earlier in source order

--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
     <header>
       <div class="banner-white-line"></div>
       <div class="header-container">
+        <div class="header-right">
+          <h1>The Weekender</h1>
+          <img class="title" src="./images/weekender.svg" alt="The Weekender">
+        </div>
         <div class="header-left">
+          <!-- Do not use images here like in the original, it facilitates localization -->
           <ul>
             <li><a href="">Service Status</a></li>
             <li><a href="">Service by Station</a></li>
             <li><a href="">Service by Line</a></li>
             <li><a href="">Service by Borough</a></li>
+            <li><a href="http://tripplanner.mta.info/" target="_blank" rel="noopener noreferrer">Trip planner+</a></li>
+            <li><a href="http://mta.info/lirr" target="_blank" rel="noopener noreferrer">LIRR</a> / <a href="http://www.mta.info/mnr" target="_blank" rel="noopener noreferrer">Metro-North</a></li>
+            <li><a href="http://mta.info/nyct/" target="_blank" rel="noopener noreferrer">Buses</a></li>
+            <li><a href="http://www.mta.info/bandt" target="_blank" rel="noopener noreferrer">Bridges & Tunnels</a></li>
           </ul>
-        </div>
-        <div class="header-right">
-          <h1>The Weekender</h1>
-          <img class="title" src="./images/weekender.svg" alt="The Weekender">
         </div>
       </div>
     </header>
