Port rest of app to React.

--- a/index.html
+++ b/index.html
@@ -7,89 +7,7 @@
   <title>The Weekender</title>
 </head>
 <body>
-
-  <div id="main">
-    <header>
-      <div class="banner-white-line"></div>
-      <div class="header-container">
-        <div class="header-right">
-          <h1>The Weekender</h1>
-          <img class="title" src="./images/weekender.svg" alt="The Weekender">
-        </div>
-        <div class="header-left">
-          <!-- Do not use images here like in the original, it facilitates localization -->
-          <ul>
-            <li><a href="">Service Status</a></li>
-            <li><a href="">Service by Station</a></li>
-            <li><a href="">Service by Line</a></li>
-            <li><a href="">Service by Borough</a></li>
-            <li><a href="http://tripplanner.mta.info/" target="_blank" rel="noopener noreferrer">Trip planner+</a></li>
-            <li><a href="http://mta.info/lirr" target="_blank" rel="noopener noreferrer">LIRR</a> / <a href="http://www.mta.info/mnr" target="_blank" rel="noopener noreferrer">Metro-North</a></li>
-            <li><a href="http://mta.info/nyct/" target="_blank" rel="noopener noreferrer">Buses</a></li>
-            <li><a href="http://www.mta.info/bandt" target="_blank" rel="noopener noreferrer">Bridges & Tunnels</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <main>
-      <div class="info-panel">
-        <h2>Subway Lines <span class="heading-instructions">Select one for service details</span></h2>
-        
-        <ul class="subway-lines">
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/1.svg" class="subway-bullet" alt="1"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/2.svg" class="subway-bullet" alt="2"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/3.svg" class="subway-bullet" alt="3"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/4.svg" class="subway-bullet" alt="4"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/5.svg" class="subway-bullet" alt="5"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/6.svg" class="subway-bullet" alt="6"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/7.svg" class="subway-bullet" alt="7"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/a.svg" class="subway-bullet" alt="A"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/c.svg" class="subway-bullet" alt="C"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/e.svg" class="subway-bullet" alt="E"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/l.svg" class="subway-bullet" alt="L"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/s.svg" class="subway-bullet" alt="S"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/b.svg" class="subway-bullet" alt="B"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/d.svg" class="subway-bullet" alt="D"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/f.svg" class="subway-bullet" alt="F"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/m.svg" class="subway-bullet" alt="M"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/n.svg" class="subway-bullet" alt="N"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/q.svg" class="subway-bullet" alt="Q"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/r.svg" class="subway-bullet" alt="R"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/w.svg" class="subway-bullet" alt="W"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/j.svg" class="subway-bullet" alt="J"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/z.svg" class="subway-bullet" alt="Z"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/g.svg" class="subway-bullet" alt="G"></a></li>
-          <li><a href=""><img src="./node_modules/nyc-subway-icons/svg/sir.svg" class="subway-bullet" alt="SIR"></a></li>
-        </ul>
-
-        <div style="clear:both;"></div>
-        <hr />
-
-        <h3>DeKalb Av</h3>
-        <span><img src="./node_modules/nyc-subway-icons/svg/b.svg" class="subway-bullet-small" alt="B"></span>
-
-
-        <div class="service-notice">
-          <h3>Weekend Service Notice <span class="heading-instructions">Select one for details</span></h3>
-        
-          <ul>
-            <li><a href="">TRACK MAINTENANCE 10:45 PM Fri, Oct 12 to 5 AM Mon, Oct 15 Norwood-bound <img src="./node_modules/nyc-subway-icons/svg/d.svg" class="subway-bullet-small" alt="D"> trains skip 25 St, Prospect Av, 4 Av-9 St, Union St and DeKalb Av in Brooklyn</a></li>
-            <li><a href="">TRACK MAINTENANCE 9:30 PM Fri, Oct 12 to 5 AM Mon, Oct 15 <img src="./node_modules/nyc-subway-icons/svg/q.svg" class="subway-bullet-small" alt="Q"> Service between 96 St in Manhattan and Prospect Park in Brooklyn is replaced by  <img src="./node_modules/nyc-subway-icons/svg/m.svg" class="subway-bullet-small" alt="M"><img src="./node_modules/nyc-subway-icons/svg/n.svg" class="subway-bullet-small" alt="N"><img src="./node_modules/nyc-subway-icons/svg/r.svg" class="subway-bullet-small" alt="R"> trains and <img src="./images/aiga_bus.svg" class="subway-bullet-small" alt="[bus icon]"> free shuttle buses</a></li>
-          </ul>
-        </div>
-
-
-      </div>
-      <div class="map-container">
-        <div id="map"></div>
-        <!-- <div class="static-map">
-          <img src="./images/station_view.png">
-        </div> -->
-      </div>
-    </main>
-    <footer id="react-footer">
-    </footer>
-  </div>
+  <div id="app"></div>
 
   <script src="./index.js"></script>
 </body>
