--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Primary Meta Tags -->
   <title>The Weekender</title>
+  <meta name="title" content="The Weekender">
+  <meta name="description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://weekender.netlify.com/">
+  <meta property="og:title" content="The Weekender">
+  <meta property="og:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
+  <meta property="og:image" content="/images/thumbnail.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://weekender.netlify.com/">
+  <meta property="twitter:title" content="The Weekender">
+  <meta property="twitter:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
+  <meta property="twitter:image" content="/images/thumbnail.png">
 </head>
 <body>
   <div id="app"></div>
