--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,15 @@
   <meta property="twitter:title" content="The Weekender">
   <meta property="twitter:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
   <meta property="twitter:image" content="/images/thumbnail.png">
+
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="app"></div>
