--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
   <meta property="og:url" content="https://weekender.netlify.com/">
   <meta property="og:title" content="The Weekender">
   <meta property="og:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
-  <meta property="og:image" content="/images/thumbnail.png">
+  <meta property="og:image" content="https://weekender.netlify.com/thumbnail.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://weekender.netlify.com/">
   <meta property="twitter:title" content="The Weekender">
   <meta property="twitter:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
-  <meta property="twitter:image" content="/images/thumbnail.png">
+  <meta property="twitter:image" content="https://weekender.netlify.com/thumbnail.png">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
