chore: update url

--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,21 @@
   <title>The Weekender HD Remaster</title>
   <meta name="title" content="The Weekender HD Remaster">
   <meta name="description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
+  <link rel="canonical" href="https://weekender.netlify.app/" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://weekender.netlify.com/">
+  <meta property="og:url" content="https://weekender.netlify.app/">
   <meta property="og:title" content="The Weekender HD Remaster">
   <meta property="og:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
-  <meta property="og:image" content="https://weekender.netlify.com/thumbnail.png">
+  <meta property="og:image" content="https://weekender.netlify.app/thumbnail.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://weekender.netlify.com/">
+  <meta property="twitter:url" content="https://weekender.netlify.app/">
   <meta property="twitter:title" content="The Weekender HD Remaster">
   <meta property="twitter:description" content="Your (unofficial) guide to planned service changes in effect for NYC’s subway system.">
-  <meta property="twitter:image" content="https://weekender.netlify.com/thumbnail.png">
+  <meta property="twitter:image" content="https://weekender.netlify.app/thumbnail.png">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
